--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@react-three/rapier": "^1.5.0",
@@ -28,7 +29,7 @@
     "embla-carousel": "^8.0.0-rc21",
     "embla-carousel-autoplay": "^8.0.0-rc21",
     "embla-carousel-react": "^8.0.0-rc21",
-    "framer-motion": "^12.4.11",
+    "framer-motion": "^11.18.2",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.316.0",
